[Cocoa] Assertion failure on ResourceUsageThread::platformCollectCPUData() https://bugs.webkit.org/show_bug.cgi?id=288760

Reviewed by NOBODY (OOPS!).

In Source/WebCore/page/cocoa/ResourceUsageThreadCocoa.mm:163, comment and ASSERT say threads[0] must be
main thread, but it seems like it's not.
```
    // Main thread is always first.
    ASSERT(threads[0].dispatchQueueName == "com.apple.main-thread"_s);
```

Following the assertion rule, we should return early if that information is missing.

* Source/WebCore/page/cocoa/ResourceUsageThreadCocoa.mm:
(WebCore::ResourceUsageThread::platformCollectCPUData):